# yale-uofc-data-analysis-project-public

./: .gitignore  ARCHITECTURE.md  ExampleFundingSheet.xlsx  LICENSE  README.md  pyproject.toml
config/: default.yaml
examples/sample_output/: avg_req_award_by_age_table.csv  avg_req_award_other_funding_table.csv  avg_requested_by_category_table.csv  other_funding_sources_counts.csv  sample_report.pptx  top_10_categories_table.csv  top_5_organizations_table.csv  transparency_report_round1.pptx
examples/sample_output/charts/: age_group_table.csv
src/uofc_funding/: __init__.py  analyzer.py  cli.py  config.py  google_api.py  loader.py
src/uofc_funding/charts/: __init__.py  bar_charts.py  base.py  pie_charts.py  tables.py
src/uofc_funding/slides/: __init__.py  builder.py  layouts.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_loader.py
tests/fixtures/: mock_data.xlsx
